# vanttec_perception

./: .gitignore  CMakeLists.txt  README.md  filter_combo.cpp
src/: CMakeLists.txt  README.md  data_augmentation.cpp  data_augmentation.h  rename_augmented_images.cpp
src/FPointnet_scripts/: FP_IMP.py  FrustumsNode.py  calib.txt  model_util.py
src/FPointnet_scripts/Support Files/: CopiasCalib.py  DataSetCapture.py  ImagetoPNG.py  PC2toBin.py  QuaternionToRotationMatrix.py  SemiSynchDC.py  YolactNode.py  rgb_detect_file_generator.py  rotation_matrix.cpp  test_appending_pc.py  test_image_num.py
src/FPointnet_scripts/log_v1/: log_train.txt  model.ckpt.index
src/FPointnet_scripts/log_v1/test/: events.out.tfevents.1626623101.rauldds
src/FPointnet_scripts/log_v1/train/: events.out.tfevents.1626623100.rauldds
src/include/: data_augmentation.cpp  data_augmentation.h
src/include/data_augmentation/: data_augmentation.cpp  data_augmentation.h
src/sketches/: blob_detection.py  circle_detection.py
src/test/: data_augmentation_test.cpp  shape_detection_test.cpp
